--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style/style.css" />
         <title>Document</title>
     </head>
     <body>
@@ -13,4 +13,6 @@
             <div id="emoji-toolbar"></div>
         </div>
     </body>
+    <script src="javascript/components.js"></script>
 </html>
+
