--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
             <div id="emoji-window"></div>
             <div id="emoji-toolbar"></div>
         </div>
-    </body>
-    <script src="javascript/components.js"></script>
-</html>
 
+        <script
+            crossorigin
+            src="https://unpkg.com/react@16/umd/react.development.js"
+        ></script>
+        <script
+            crossorigin
+            src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+        <script src="javascript/components.js" type="text/babel"></script>
+    </body>
+</html>
