--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,10 +10,11 @@
     <meta name="theme-color" content="#000000" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="../src/style/style.css">
+    <link rel="stylesheet" href="./style/main.css">
    
     <title>React App</title>
   </head>
+  
   <body>
     
     <div id="root"></div>
